# third_party

oidn/: .bazelrc  .gitignore  BUILD.bazel  Bazel.md  WORKSPACE.bazel
oidn-1.4.3/: .gitignore  BUILD.bazel  MODULE.bazel  oidn_generate_cpp_from_blob.bzl
oidn-1.4.3/apps/: oidnTest.cpp
oidn-weights-0.0.0-20210406-a34b764/: MODULE.bazel
oidn/apps/: oidnTest.cpp
oidn/bazel/: odin_deps.bzl
oidn/bazel/example/: BUILD.bazel  example.cpp
oidn/cmake/: oidn_macros.cmake
oidn/common/: platform.cpp
oidn/core/: common.h
oidn/data/: BUILD.bazel
oidn/weights/: rt_alb.tza.h
tiff-4.7.1/: BUILD.bazel  MODULE.bazel
